tests/fixtures/invalid/set_lt_list.py
# Cannot compare with < Set[int] and List[int]
x: bool = {1, 2, 3} < [1, 2, 3]
